# PX4-Autopilot

./: CMakeLists.txt  README.md
.ci/: Jenkinsfile-hardware
msg/: CMakeLists.txt  (+2 more)
src/modules/sbg/sbgECom/: CMakeLists.txt  README.md
src/modules/sbg/sbgECom/can/: sbgCan.dbc  sbgCan.dbf
src/modules/sbg/sbgECom/common/platform/: sbgPlatform.c
src/modules/sbg/sbgECom/src/: sbgECanId.h  sbgECom.h  sbgEComGetVersion.h  sbgEComIds.h  sbgEComLib.h  sbgEComVersion.h
src/modules/sbg/sbgECom/src/binaryLogs/: sbgEComBinaryLogAirData.h  sbgEComBinaryLogAutomotiveData.h  sbgEComBinaryLogDepth.h  sbgEComBinaryLogDiag.h  sbgEComBinaryLogDvl.h  sbgEComBinaryLogEkf.h  sbgEComBinaryLogEvent.h  sbgEComBinaryLogGps.h  sbgEComBinaryLogImu.h  sbgEComBinaryLogMag.h  sbgEComBinaryLogOdometer.h  sbgEComBinaryLogShipMotion.h  sbgEComBinaryLogStatus.h  sbgEComBinaryLogUsbl.h  sbgEComBinaryLogUtc.h  sbgEComBinaryLogs.c  sbgEComBinaryLogs.h
src/modules/sbg/sbgECom/src/commands/: sbgEComCmd.h  sbgEComCmdAdvanced.h  sbgEComCmdAirData.h  sbgEComCmdCommon.c  sbgEComCmdCommon.h  sbgEComCmdDvl.h  sbgEComCmdEthernet.h  sbgEComCmdEvent.h  sbgEComCmdFeatures.c  sbgEComCmdFeatures.h  sbgEComCmdGnss.c  sbgEComCmdGnss.h  sbgEComCmdInfo.h  sbgEComCmdInterface.h  sbgEComCmdLicense.h  sbgEComCmdMag.c  sbgEComCmdMag.h  sbgEComCmdOdo.c  sbgEComCmdOdo.h  sbgEComCmdOutput.c  sbgEComCmdOutput.h  sbgEComCmdSensor.c  sbgEComCmdSensor.h  sbgEComCmdSettings.h
src/modules/sbg/sbgECom/src/examples/: ellipseOnboardMagCalib.c
src/modules/sbg/sbgECom/src/protocol/: sbgEComProtocol.c  sbgEComProtocol.h
(+87 files in other folders)
